<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/gray">
	
	<RelativeLayout
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:layout_height="wrap_content">
		
		
		<RelativeLayout
			android:id="@+id/rlToolBar"
			android:layout_width="wrap_content"
			android:layout_height="@dimen/_80sdp"
			android:layout_marginBottom="@dimen/_10sdp"
			android:background="@drawable/tootbar_layout">
			
			<ImageView
				android:id="@+id/iv_backButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/_20sdp"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:background="@drawable/ic_baseline_arrow_back_24" />
			
			<TextView
				android:id="@+id/tv_events"
				style="@style/text_header_bold_15sp_white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/_10sdp"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:layout_toEndOf="@+id/iv_backButton"
				android:text="@string/event_page_name" />
			
			
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_margin="@dimen/_10sdp">
				
				<ImageView
					android:id="@+id/iv_map_button"
					
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/baseline_location_on_24" />
				
				<ImageView
					android:id="@+id/iv_calendar_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/_10sdp"
					android:layout_toEndOf="@+id/iv_map_button"
					android:background="@drawable/baseline_date_range_24" />
			
			
			</RelativeLayout>
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rlSearch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_50sdp"
			android:layout_marginEnd="@dimen/_20sdp">
			
			<SearchView
				android:id="@+id/search_view"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_40sdp"
				android:background="@drawable/searchbar_background"
				android:queryHint="Search"
				android:textSize="14sp" />
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_view_pager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rlSearch"
			android:layout_marginTop="@dimen/_10sdp"
			android:visibility="visible">
			
			<androidx.viewpager.widget.ViewPager
				android:id="@+id/vpDashboardFeature"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_200sdp"
				android:layout_marginStart="@dimen/_20sdp"
				android:layout_marginEnd="@dimen/_20sdp"
				android:background="@android:color/transparent"
				android:focusable="false" />
		
		</RelativeLayout>
		
		<RelativeLayout
			android:id="@+id/rl_upcoming_events"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rlSearch"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp"
			android:visibility="visible">
			
			<TextView
				android:id="@+id/tv_upcoming_events"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/_10sdp"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:text="@string/event_upcoming" />
			
			
			<include
				android:id="@+id/includesIncomingEvents"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_upcoming_events"
				android:layout_marginBottom="@dimen/_5sdp" />
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_featured_events"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_upcoming_events"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp"
			android:visibility="visible">
			
			<ImageView
				android:id="@+id/iv_featured_image_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:background="@drawable/flame" />
			
			
			<TextView
				android:id="@+id/tv_featured_events"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:layout_toEndOf="@+id/iv_featured_image_icon"
				android:text="@string/featured_event" />
			
			
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_marginTop="@dimen/_10sdp">
				
				
				<TextView
					android:id="@+id/tv_view_all"
					style="@style/text_header_bold_15sp_gray"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/_10sdp"
					android:text="@string/view_all" />
				
				<ImageView
					android:id="@+id/iv_view_all"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/_10sdp"
					android:layout_toEndOf="@+id/tv_view_all"
					android:background="@drawable/baseline_arrow_forward_24" />
			
			</RelativeLayout>
			
			
			<include
				android:id="@+id/includesFeaturedRecyclerView"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_featured_events"
				android:layout_marginBottom="@dimen/_5sdp" />
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_category"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_featured_events"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp"
			android:visibility="visible">
			
			
			<TextView
				android:id="@+id/tv_browse_by_category"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:text="@string/browse_by_category" />
			
			
			<include
				android:id="@+id/includesCategoryRecyclerView"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_browse_by_category"
				android:layout_marginBottom="@dimen/_5sdp" />
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_new_events"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_category"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp"
			android:visibility="visible">
			
			<ImageView
				android:id="@+id/iv_new_events_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:background="@drawable/baseline_event_24" />
			
			
			<TextView
				android:id="@+id/tv_new_events"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:layout_toEndOf="@+id/iv_new_events_icon"
				android:text="@string/new_event" />
			
			
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_marginTop="@dimen/_10sdp">
				
				
				<TextView
					android:id="@+id/tv_new_events_view_all"
					style="@style/text_header_bold_15sp_gray"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/_10sdp"
					android:text="@string/view_all" />
				
				<ImageView
					android:id="@+id/iv_new_events_view_all"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/_10sdp"
					android:layout_toEndOf="@+id/tv_new_events_view_all"
					android:background="@drawable/baseline_arrow_forward_24" />
			
			</RelativeLayout>
			
			<include
				android:id="@+id/includesNewEventsRecyclerView"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_new_events"
				android:layout_marginBottom="@dimen/_5sdp" />
		
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_artists"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_new_events"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp"
			android:visibility="visible">
			
			<ImageView
				android:id="@+id/iv_artist_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_15sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				
				android:background="@drawable/music_microphone" />
			
			
			<TextView
				android:id="@+id/tv_artist_name"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:layout_toEndOf="@+id/iv_artist_icon"
				android:text="@string/artist" />
			
			
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_marginTop="@dimen/_10sdp">
				
				
				<TextView
					android:id="@+id/tv_artist_view_all"
					style="@style/text_header_bold_15sp_gray"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/_10sdp"
					android:text="@string/view_all" />
				
				<ImageView
					android:id="@+id/iv_artist_view_all"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/_10sdp"
					android:layout_toEndOf="@+id/tv_artist_view_all"
					android:background="@drawable/baseline_arrow_forward_24" />
			
			</RelativeLayout>
			
			<include
				android:id="@+id/includesArtistRecyclerView"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_artist_name"
				android:layout_marginBottom="@dimen/_5sdp" />
		
		
		</RelativeLayout>
		
		
		<RelativeLayout
			android:id="@+id/rl_explore_venues"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_artists"
			android:layout_marginStart="@dimen/_20sdp"
			android:layout_marginTop="@dimen/_10sdp"
			android:layout_marginEnd="@dimen/_20sdp">
			
			<ImageView
				android:id="@+id/iv_veneus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:background="@drawable/baseline_location_on_24" />
			
			<TextView
				android:id="@+id/tv_venue_name"
				style="@style/text_header_bold_15sp_black"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				android:layout_toEndOf="@+id/iv_veneus"
				android:text="@string/explorer_venues" />
			
			
			<include
				android:id="@+id/includesVenuesRecyclerView"
				layout="@layout/recycleview_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_venue_name"
				android:layout_marginBottom="@dimen/_5sdp" />
		</RelativeLayout>
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/rl_explore_venues"
			android:layout_marginStart="@dimen/_20sdp">
			
			<androidx.cardview.widget.CardView
				android:id="@+id/card_view"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_140sdp"
				android:layout_marginStart="@dimen/_10sdp"
				android:layout_marginTop="@dimen/_10sdp"
				android:layout_marginEnd="@dimen/_10sdp"
				android:layout_marginBottom="@dimen/_10sdp"
				app:cardCornerRadius="@dimen/_7sdp">
				
				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginTop="@dimen/_20sdp">
					
					<RelativeLayout
						android:id="@+id/rl_offers"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/_10sdp"
						android:layout_marginEnd="@dimen/_10sdp">
						
						<ImageView
							android:id="@+id/iv_cash_offers"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="@dimen/_10sdp"
							android:background="@drawable/baseline_settings_applications_24" />
						
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_toEndOf="@+id/iv_cash_offers">
							
							<TextView
								android:id="@+id/tv_retailer_name"
								style="@style/text_header_bold_20sp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/cash_back_offers" />
							
							<TextView
								android:id="@+id/tv_place"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@+id/tv_retailer_name"
								android:text="@string/cash_back_offers_subtitle" />
						</RelativeLayout>
					</RelativeLayout>
					
					<View
						android:id="@+id/view"
						android:layout_width="wrap_content"
						android:layout_height="@dimen/_2sdp"
						android:layout_below="@+id/rl_offers"
						android:layout_marginTop="@dimen/_20sdp"
						android:background="@color/gray" />
					
					<RelativeLayout
						android:id="@+id/rl_help_line"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/view"
						android:layout_marginStart="@dimen/_10sdp"
						android:layout_marginTop="@dimen/_10sdp"
						android:layout_marginEnd="@dimen/_10sdp">
						
						<ImageView
							android:id="@+id/iv_help_line"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="@dimen/_10sdp"
							android:background="@drawable/baseline_help_24" />
						
						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_toEndOf="@+id/iv_help_line">
							
							<TextView
								android:id="@+id/tv_help_line_title"
								style="@style/text_header_bold_20sp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/cash_back_support" />
							
							<TextView
								android:id="@+id/tv_help_line_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@+id/tv_help_line_title"
								android:text="@string/cash_back_support_subtitle" />
						</RelativeLayout>
					</RelativeLayout>
				</RelativeLayout>
			</androidx.cardview.widget.CardView>
		</RelativeLayout>
	</RelativeLayout>
</androidx.core.widget.NestedScrollView>
